--- a/views/links/index.erb
+++ b/views/links/index.erb
@@ -11,3 +11,9 @@
 <form action='/links/new'>
 <button type='submit' name='New Link'>New Link</button>
 </form>
+<form action='/tags'>
+  <label for='name'>
+    Search for tag:
+    <input type='text' name='name' />
+  </label><button type='submit' name='search'>Search</button>
+</form>
